Panama Site and underdevelopment notice
Created the sub-site for the panama funding round and added an under construction site for the official site.  + unfinished carrousel for the offcial site

--- a/Three-site/index.html
+++ b/Three-site/index.html
@@ -1,93 +1,72 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Outer Heaven</title>
-  </head>
-  <body>
-
-
-    <div id="app"></div>
-
-    <canvas id="bg"></canvas>
-
-    <main class="scroll-container">
-
-      <header id="section0" class="snap-section">
-        <h1>Outer Heaven</h1>
-        <p>🚀 Robotics Reimagined</p>
-        <p>🌌 A Journey Through the Cosmos of Creativity</p>
-        <br style="margin-top: 200px; margin-bottom: 200px;" />
-      </header>
-
-
-      <blockquote>
-        <p>I like making stuff and putting it on the internet</p>
-      </blockquote>
-
-
-      <section id="section1" class="snap-section">
-        <h2>📜 Manifesto</h2>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        </p>
-
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        </p>
-
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        </p>
-
-      </section>
-
-      <section id="section2" class="snap-section">
-        <h2>👩🏽‍🚀 Projects</h2>
-
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        </p>
-
-        <h2>🏆 Accomplishments</h2>
-
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        </p>
-
-      </section>
-
-      <blockquote>
-        <p>The best way out is always through <br>-Robert Frost</p>
-      </blockquote>
-
-      <section id="section3" class="snap-section">
-        <h2>🌮 Work History</h2>
-
-        <h3>McDonalds</h3>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        </p>
-        <h3>Burger King</h3>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        </p>
-
-      </section>
- 
-      <footer>
-        <h2>Contact</h2>
-        <p>📧 Email: <a href="mailto: info@outerheaven.team">info@outerheaven.team</a></p>
-      </footer>
-
-
-
-      
-     
-
-    </main>
-
-    <script type="module" src="/src/main.js"></script>
-  </body>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Outer Heaven | Under Development</title>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+  <style>
+    body {
+      min-height: 100vh;
+      margin: 0;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      background: linear-gradient(120deg, #0a0c10 60%, #005288 100%);
+      font-family: 'Montserrat', Arial, sans-serif;
+      color: #fff;
+    }
+    .underdev-container {
+      background: rgba(30,34,44,0.55);
+      border-radius: 18px;
+      box-shadow: 0 4px 32px #0008;
+      padding: 2.5rem 2.2rem;
+      text-align: center;
+      max-width: 420px;
+      backdrop-filter: blur(8px) saturate(1.2);
+      -webkit-backdrop-filter: blur(8px) saturate(1.2);
+      border: 1.5px solid #22262c;
+    }
+    .underdev-logo {
+      width: 80px;
+      height: 80px;
+      object-fit: contain;
+      border-radius: 16px;
+      margin-bottom: 1.2rem;
+      background: #fff2;
+      box-shadow: 0 2px 8px #00528844;
+    }
+    h1 {
+      font-size: 2.2rem;
+      font-weight: 900;
+      margin-bottom: 1.2rem;
+      letter-spacing: 0.12em;
+      color: #e03c31;
+      text-transform: uppercase;
+    }
+    p {
+      font-size: 1.15rem;
+      color: #d0d6db;
+      margin-bottom: 1.7rem;
+    }
+    .contact-link {
+      color: #005288;
+      text-decoration: underline;
+      font-weight: 700;
+      font-size: 1.07rem;
+    }
+  </style>
+</head>
+<body>
+  <div class="underdev-container">
+    <img src="panama/data outer heaven.png" alt="Outer Heaven Team Logo" class="underdev-logo">
+    <h1>Site Under Development</h1>
+    <p>
+      The Outer Heaven main site is currently under construction.<br>
+      Please check back soon for updates and new features.<br>
+      For urgent inquiries, contact us at <a href="mailto:info@outerheaven.team" class="contact-link">info@outerheaven.team</a>.
+    </p>
+  </div>
+</body>
 </html>
